add fd/FILE* sources and sinks
resolves #1

Pull Request merged: #2
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-SET(TEST_FILES test_buffer.c test_dsp.c test_math.c)
+SET(TEST_FILES test_buffer.c test_dsp.c test_math.c test_io.c)
   
 
 add_executable(run_tests EXCLUDE_FROM_ALL test_main.c test_common.c ${TEST_FILES})
