--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,5 +1,5 @@
 target_include_directories(hiemal PUBLIC include)
-target_sources(hiemal PRIVATE fmt.c playback.c error.c buffer.c dsp.c intern/math.c intern/async.c signal_chain.c)
+target_sources(hiemal PRIVATE fmt.c playback.c error.c buffer.c dsp.c intern/math.c intern/async.c signal_chain.c io.c)
 
 set (HIEMAL_PUBLIC_INCLUDE
   "include/dsp.h"
