add cmake option to add commit info in docs footer
Resolves #4
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ cmake_minimum_required(VERSION 3.13)
 execute_process(COMMAND "git" "rev-parse" "--short" "HEAD" 
   OUTPUT_VARIABLE HIEMAL_GIT_COMMIT 
   OUTPUT_STRIP_TRAILING_WHITESPACE)
+execute_process(COMMAND "git" "rev-parse" "HEAD" 
+  OUTPUT_VARIABLE HIEMAL_GIT_COMMIT_LONG
+  OUTPUT_STRIP_TRAILING_WHITESPACE)
 project(HIEMAL VERSION 0.1.0)
 
 configure_file(cmake/version.h.in version.h @ONLY)
