--- a/cmake/cmake_info.h.in
+++ b/cmake/cmake_info.h.in
@@ -3,3 +3,4 @@
 #define HIEMAL_VERSION_PATCH "@HIEMAL_VERSION_PATCH@"
 
 #cmakedefine HIEMAL_GIT_COMMIT "@HIEMAL_GIT_COMMIT@"
+#cmakedefine WITH_ALSA
