--- a/docs/conf.py.in
+++ b/docs/conf.py.in
@@ -54,6 +54,7 @@ html_baseurl = "https://www.hiemal.dev"
 # relative to this directory. They are copied after the builtin static files,
 # so a file named "default.css" will overwrite the builtin "default.css".
 html_static_path = ['_static']
+html_favicon = '_static/hm_favicon.png'
 # html_logo = "_static/hiemal.png"
 breathe_projects = {"hiemal": "@PROJECT_BINARY_DIR@/docs/xml"}
 breathe_default_project = "hiemal"
