Add C protobuf wrappers
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,12 +40,34 @@ if (WITH_ALSA)
   target_link_libraries(hiemal asound)
 endif()
 
+set(WITH_PROTOBUF "OFF" CACHE BOOL "Build protocol buffers")  
+find_package (Protobuf)
+if(NOT Protobuf_FOUND)
+  set(WITH_PROTOBUF "OFF")
+endif()
+# check whether or not static or dynamic libraries were found, 
+# prefer static if both are present
+if(WITH_PROTOBUF)
+  if(EXISTS ${Protobuf_LIBRARIES}/libprotobuf.a)
+    set(LIBPROTOBUF_TYPE "static")
+    set(PROTOBUF_LIB ${Protobuf_LIBRARIES}/libprotobuf.a)
+  elseif(EXISTS ${Protobuf_LIBRARIES}/libprotobuf.so)
+    set(LIBPROTOBUF_TYPE "shared")
+    set(PROTOBUF_LIB ${Protobuf_LIBRARIES}/libprotobuf.so)
+  else()
+    set(LIBPROTOBUF_TYPE "unknown")
+  endif()
+endif()
+
 set(WITH_UTILS "OFF" CACHE BOOL "Build hiemal utilities")
 
 add_subdirectory(src/core)
 add_subdirectory(src/python)
 if(WITH_UTILS)
   add_subdirectory(src/utils)
+endif()
+if(WITH_PROTOBUF)
+  add_subdirectory(src/protobuf)
 endif()
 add_subdirectory(docs)
 add_subdirectory(test)
@@ -72,6 +94,13 @@ if(WITH_UTILS)
   message(STATUS "Utils: YES")
 else()
   message(STATUS "Utils: NO")
+endif()
+message(STATUS "")
+if(NOT WITH_PROTOBUF)
+  message(STATUS "Protobuf: NO")
+else()
+  message(STATUS "Protobuf: YES")
+  message(STATUS "  libprotobuf: ${LIBPROTOBUF_TYPE}")
 endif()
 message(STATUS "")
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
