Add python module stub
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.22)
 
 # check if we are inside of a git repository
 execute_process(COMMAND "git" "status"
@@ -19,13 +19,28 @@ add_library(hiemal SHARED)
 target_include_directories(hiemal PRIVATE ${CMAKE_BINARY_DIR}/include)
 target_link_libraries(hiemal m)
 
-add_subdirectory(src/core)
-add_subdirectory(docs)
-add_subdirectory(test)
+if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+  set(WITH_ALSA "ON" CACHE BOOL "Use ALSA")  
+  find_package(ALSA)
+  if(NOT ALSA_FOUND)
+    set(WITH_ALSA "OFF")
+  endif()
+endif()
+
+set(WITH_PYTHON "ON" CACHE BOOL "Build python module")  
+find_package (Python COMPONENTS Interpreter Development)
+if(NOT Python_FOUND)
+  set(WITH_PYTHON "OFF")
+endif()
 
 if (WITH_ALSA)
   target_link_libraries(hiemal asound)
 endif()
+
+add_subdirectory(src/core)
+add_subdirectory(src/python)
+add_subdirectory(docs)
+add_subdirectory(test)
 
 file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
 configure_file(cmake/cmake_info.h.in include/cmake_info.h @ONLY)
@@ -53,6 +68,15 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
   endif()
   message(STATUS "")
 endif()
+if (NOT WITH_PYTHON)
+  message(STATUS "Python: NO")
+else()
+  message(STATUS "Python: YES")
+  message(STATUS "  Interpreter: ${Python_EXECUTABLE}")
+  message(STATUS "  Include Dir: ${Python_INCLUDE_DIRS}")
+  message(STATUS "  Library: ${Python_LIBRARIES}")
+endif()
+message(STATUS "")
 message(STATUS "Documentation:")
 if (SPHINX_COMMIT_INFO)
   message(STATUS "  Sphinx add commit info to footer: YES")
