Install python module if it was built
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ if (GIT_STATUS_RET EQUAL "0")
 else()
   message(STATUS "  Found git repository: NO")
 endif()
+message(STATUS "  Install location: ${CMAKE_INSTALL_PREFIX}")
 message(STATUS "")
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
   message(STATUS "Linux-specific options:")
