--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -4,4 +4,7 @@ if(WITH_PYTHON)
   target_include_directories(hm PRIVATE ${Python_INCLUDE_DIRS})
   target_link_libraries(hm ${Python_LIBRARIES})
   target_sources(hm PRIVATE hiemal.c)
+  install(TARGETS hm
+  LIBRARY
+    DESTINATION "lib/python${Python_VERSION_MAJOR}.${Python_VERSION_MINOR}")
 endif()
