--- a/cmake/cmake_info.h.in
+++ b/cmake/cmake_info.h.in
@@ -1,3 +1,4 @@
+#define HIEMAL_VERSION_STR "@HIEMAL_VERSION_STR@"
 #define HIEMAL_VERSION_MAJOR "@HIEMAL_VERSION_MAJOR@"
 #define HIEMAL_VERSION_MINOR "@HIEMAL_VERSION_MINOR@"
 #define HIEMAL_VERSION_PATCH "@HIEMAL_VERSION_PATCH@"
