--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -14,10 +14,12 @@ target_sources(hiemal PRIVATE
   logging.c)
 
 set(HIEMAL_PUBLIC_INCLUDE
-  "include/dsp.h"
-  "include/buffer.h")
+  "include/intern/dsp.h"
+  "include/intern/buffer.h")
 
 set_target_properties(hiemal PROPERTIES PUBLIC_HEADER "${HIEMAL_PUBLIC_INCLUDE}")
 install(TARGETS hiemal
   PUBLIC_HEADER
-    DESTINATION "include/hiemal")
+    DESTINATION "include/hiemal"
+  RESOURCE
+    DESTINATION "lib/pkgconfig")
