--- a/src/protobuf/CMakeLists.txt
+++ b/src/protobuf/CMakeLists.txt
@@ -20,4 +20,5 @@ target_include_directories(hiemal PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 target_include_directories(hiemal PRIVATE ${Protobuf_INCLUDE_DIRS})
 target_sources(hiemal PRIVATE ${PB_SRC_DEP})
 target_link_libraries(hiemal ${PROTOBUF_LIB})
+target_include_directories(hiemal PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/_c_wrap)
 target_sources(hiemal PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/_c_wrap/hm_protobuf.cpp)
