--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,6 +18,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install cmake
           sudo apt-get install libasound2-dev
+          sudo apt-get install libpulse-dev
 
       - name: build
         run: |
