Make async loop event-driven
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,9 @@
-SET(TEST_FILES test_buffer.c test_dsp.c test_math.c test_io.c test_async.c)
+SET(TEST_FILES 
+  test_buffer.c 
+  test_dsp.c 
+  test_math.c 
+  test_io.c 
+  test_async.c)
 
 if(WITH_PROTOBUF)
   list(APPEND TEST_FILES test_pb_c_wrap.c)
