Improve pulseaudio support, add sine wave source
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -12,7 +12,9 @@ target_sources(hiemal PRIVATE
   info.c
   logging.c
   device.c
-  backend.c)
+  backend.c
+  common.c
+  switchboard.c)
 
 if(WITH_ALSA)
   target_sources(hiemal PRIVATE alsa.c)
