--- a/test/test_main.c.in
+++ b/test/test_main.c.in
@@ -1,50 +1,22 @@
-#include <stdio.h>
 #include <time.h>
-#include <stdbool.h>
-#include <stdlib.h>
-#include <string.h>
 
 #include "test_common.h"
+#include "util.h"
 
 %%TEST_DECLARATIONS%%
 
-struct _test_info {
-  char *test_name;
-  enum {OK=0,FAILED,SKIPPED} result;
-  double elapsed_time;
-  bool completed;
-};
-
-struct _testing_results {
-  unsigned int n_tests;
-  struct _test_info *tests;
-};
-
-typedef struct _test_info test_info_t;
-typedef struct _testing_results testing_results_t;
-
-int print_results_json(char *filename, const testing_results_t *results) {
-  FILE *fp = fopen(filename, "w");
-  fwrite("{\n", 1, 2, fp);
-  fwrite("  \"results\":\n", 1, 13, fp);
-  int i;
-  // TODO: calculate the exact number of bytes to allocate
-  char *line_buf = (char*)malloc(256);
-  for (i = 0; i < results->n_tests; i++) {
-    test_info_t *current_test = &(results->tests[i]);
-    memset(line_buf, 0, 256);
-    sprintf(line_buf, "    %s{\"id\": %d, \"name\": \"%s\", \"result\": \"%s\", \"elapsed_time\": %.2f}%s", \
-      (i==0) ? "[" : "", i+1, current_test->test_name, (current_test->result == OK) ? "OK" : "FAILED", \
-      current_test->elapsed_time, ((i+1)==results->n_tests) ? "]" : ",\n");
-    fwrite(line_buf, 1, strlen(line_buf), fp);
+char *test_msg(int result) {
+  switch (result) {
+    case 0:
+      return "\e[1;32mOK\e[0m";
+    case 1:
+      return "\e[1;31mFAILED\e[0m"; 
+    case 2:
+      return "\e[1;33mSKIPPED\e[0m"; 
   }
-  free(line_buf);
-  fwrite("\n}\n", 1, 3 ,fp);
-  fclose(fp);
-  return 0;
 }
 
-int main() {
+int main(int argc, char **argv) {
   testing_results_t results;
   results.n_tests = %%N_TESTS%%;
   results.tests = (test_info_t*)malloc(results.n_tests*sizeof(test_info_t));
@@ -52,27 +24,44 @@ int main() {
   char *test_names[] = %%TEST_NAMES%%;
   int i, rc;
   unsigned int n_success = 0;
+  unsigned int n_skipped = 0;
+  time_t start_time, end_time;
+  if (argc == 2) {
+    parse_test_list(&results, argv[1]);
+  }
+  else {
+    parse_test_list(&results, NULL);
+  }
   printf("Running %d tests\n", results.n_tests);
   for (i = 0; i < results.n_tests; i++) {
     test_info_t *current_test = &(results.tests[i]);
     printf("Test %d/%d (%s):", i+1, results.n_tests, test_names[i]);
     fflush(stdout);
-    time_t start_time = time(NULL);
-    rc = (*test_list[i])();
-    time_t end_time = time(NULL);
+    
+    start_time = time(NULL);
+    if (current_test->run_test) {
+      rc = (*test_list[i])();
+    }
+    else {
+      rc = TEST_SKIPPED;
+    }
+    end_time = time(NULL);
     current_test->test_name = test_names[i];
-    current_test->result = (rc == TEST_SUCCESS) ? OK : FAILED;
+    current_test->result = rc;
     if (rc == TEST_SUCCESS) {
       n_success++;
+    }
+    else if (rc == TEST_SKIPPED) {
+      n_skipped++;
     }
     current_test->elapsed_time = difftime(end_time, start_time);
     current_test->completed = true;
     printf(" %s (%.2f seconds)\n",  \
-      (rc == TEST_SUCCESS ? "\e[1;32mOK\e[0m" : "\e[1;31mFAILED\e[0m"), \
+      test_msg(rc), \
       current_test->elapsed_time);
   }
-  printf("%d/%d tests passed\n", n_success, results.n_tests);
+  printf("%d/%d tests passed (%d skipped)\n", n_success, results.n_tests - n_skipped, n_skipped);
   print_results_json("test_results.json", &results);
   free(results.tests);
-  return (n_success == results.n_tests) ? 0 : 1;
+  return (n_success == results.n_tests - n_skipped) ? 0 : 1;
 }
