fix failing github tests
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/cmake/cmake_info.h.in
+++ b/cmake/cmake_info.h.in
@@ -5,4 +5,5 @@
 
 #cmakedefine HIEMAL_GIT_COMMIT "@HIEMAL_GIT_COMMIT@"
 #cmakedefine WITH_ALSA
+#cmakedefine WITH_PULSEAUDIO
 #cmakedefine WITH_PROTOBUF
