switchboard additions, update header guards
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,7 +4,8 @@ SET(TEST_FILES
   test_math.c 
   test_io.c 
   test_async.c
-  test_common.c)
+  test_common.c
+  test_switchboard.c)
 
 if(WITH_PROTOBUF)
   list(APPEND TEST_FILES test_pb_c_wrap.c)
