switchboard interface additions
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -34,7 +34,8 @@ endif()
 
 set(HIEMAL_PUBLIC_INCLUDE
   "include/api/buffer.h"
-  "include/api/recording.h")
+  "include/api/recording.h"
+  "include/api/switchboard.h")
 
 set_target_properties(hiemal PROPERTIES PUBLIC_HEADER "${HIEMAL_PUBLIC_INCLUDE}")
 install(TARGETS hiemal
