Add buffer event polling
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -19,7 +19,7 @@ target_sources(hiemal PRIVATE
 
 if(UNIX)
   target_sources(hiemal PRIVATE
-    common_unix.c
+    event_unix.c
     semaphore_unix.c
     switchboard_unix.c
     thread_unix.c)
