--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,7 +7,8 @@ SET(TEST_FILES
   test_common.c
   test_semaphore.c
   test_switchboard.c
-  test_thread.c)
+  test_thread.c
+  test_event.c)
 
 if(WITH_PROTOBUF)
   list(APPEND TEST_FILES test_pb_c_wrap.c)
