Add argument parsing utility functions
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -2,4 +2,5 @@ add_library(hmutil STATIC)
 target_include_directories(hmutil PUBLIC ../core/include)
 target_link_libraries(hiemal hmutil)
 target_sources(hmutil PRIVATE 
-  tty.c)
+  tty.c
+  args.c)
