Add string parsing util functions
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -3,4 +3,5 @@ target_include_directories(hmutil PUBLIC ../core/include)
 target_link_libraries(hiemal hmutil)
 target_sources(hmutil PRIVATE 
   tty.c
-  args.c)
+  args.c
+  str.c)
